--- a/style.scss
+++ b/style.scss
@@ -1,10 +1,66 @@
 * {
     font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+    color: white;
     padding: 0;
     margin: 0 auto;
     h1 {
         font-family: 'Poppins', sans-serif;
+        font-size: 2.5rem;   
+    }
+    p {
+        font-size: 1rem;
     }
 }
 
+img {
+    max-width: 100%;
+}
 
+body {
+    background-image: url(/images/bg-desktop.svg);
+    background-color: hsl(257, 40%, 49%);
+    background-repeat: no-repeat;
+}
+
+.header {
+    margin-bottom: 5%;
+}
+
+.container {
+    margin-inline: 5rem;
+    padding: 2% 0;
+}
+
+.content {
+    display: flex;
+    max-width: 100%;
+    gap: 5rem;
+    @media (max-width:71.25rem) {
+        flex-direction: column;
+    }
+
+    .left {
+        min-width: 50%;
+        img {
+            max-width: 100%;
+        }
+    }
+    
+    .right {
+        display: block;
+        margin: auto 0;
+        max-width: 50%;
+        .button {
+            padding: 2em 0;
+            a {
+                padding: 0.85rem 3.8rem;
+                background: white;
+                color: hsl(257, 40%, 49%);
+                border-radius: 50rem;
+                text-decoration: none;
+                box-shadow: 0px 5px 15px 5px rgba(0,0,0,0.3);
+            }
+        }
+    }
+}
