--- a/style.scss
+++ b/style.scss
@@ -11,6 +11,9 @@
     p {
         font-size: 1rem;
     }
+    a {
+        font-family: 'Poppins', sans-serif;
+    }
 }
 
 img {
@@ -21,6 +24,12 @@ body {
     background-image: url(/images/bg-desktop.svg);
     background-color: hsl(257, 40%, 49%);
     background-repeat: no-repeat;
+    background-size:cover;
+
+    @media (max-width: 74.75rem) {
+        background-image: url(/images/bg-mobile.svg);
+        background-size: 100%;
+    }
 }
 
 .header {
@@ -36,7 +45,7 @@ body {
     display: flex;
     max-width: 100%;
     gap: 5rem;
-    @media (max-width:71.25rem) {
+    @media (max-width:74.75rem) {
         flex-direction: column;
     }
 
@@ -50,9 +59,27 @@ body {
     .right {
         display: block;
         margin: auto 0;
-        max-width: 50%;
+        @media (max-width: 74.75rem){
+            min-width:100%;
+        }
+
+        .text {
+            h1, p {
+                line-height: 1.45em;
+                margin-bottom: 2rem;
+                @media (max-width: 74.75rem) {
+                    text-align: center;
+                }
+            }
+        }
+
         .button {
             padding: 2em 0;
+
+            @media (max-width: 74.75rem) {
+                display: flex;
+                justify-content: center;
+            }
             a {
                 padding: 0.85rem 3.8rem;
                 background: white;
@@ -60,6 +87,12 @@ body {
                 border-radius: 50rem;
                 text-decoration: none;
                 box-shadow: 0px 5px 15px 5px rgba(0,0,0,0.3);
+                transition: 250ms;
+
+                &:hover {
+                    background-color: hsl(300, 69%, 71%);
+                    color: white;
+                }
             }
         }
     }
