--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
   font-size: 16px;
   color: white;
   padding: 0;
-  margin: 0 auto;
 }
 
 * h1 {
@@ -38,7 +37,13 @@ body {
 }
 
 .header {
-  margin-bottom: 5%;
+  max-width: 100%;
+  padding: 0;
+}
+
+.header img {
+  width: 50%;
+  max-width: 20rem;
 }
 
 .container {
@@ -51,7 +56,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   max-width: 100%;
-  gap: 5rem;
+  gap: 4.5rem;
+  margin: 2% auto;
 }
 
 @media (max-width: 74.75rem) {
@@ -60,6 +66,8 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    gap: 2rem;
+    margin-top: 2rem;
   }
 }
 
@@ -138,7 +146,7 @@ body {
 
 .icon {
   color: white;
-  font-size: 2rem;
+  font-size: 1.75rem;
   font-weight: bold;
   padding: 0.5em;
   border: 2px solid currentColor;
