--- a/style.scss
+++ b/style.scss
@@ -36,7 +36,7 @@ body {
     max-width: 100%;
     padding:0;
 
-    img {
+    svg {
         width: 50%;
         max-width: 20rem;
     }
@@ -60,7 +60,7 @@ body {
 
     .left {
         min-width: 50%;
-        img {
+        svg {
             max-width: 100%;
         }
     }
