--- a/style.scss
+++ b/style.scss
@@ -20,13 +20,13 @@ img {
 }
 
 body {
-    background-image: url(/images/bg-desktop.svg);
+    background-image: url(images/bg-desktop.svg);
     background-color: hsl(257, 40%, 49%);
     background-repeat: no-repeat;
     background-size:cover;
 
     @media (max-width: 74.75rem) {
-        background-image: url(/images/bg-mobile.svg);
+        background-image: url(images/bg-mobile.svg);
         background-size: 100%;
     }
 }
